<resources>
    <string name="app_name">BarberShop</string>
    <string name="btnAddService">View Bookings</string>
    <string name="txtViewTitleOfService">Fit Your Schedule</string>
    <string name="btnSelectDate">Select Date</string>
    <string name="btnSelectTime">Select Time</string>
    <string name="btnSubmitBooking">Book</string>
    <string name="btnLogout">Logout</string>
    <string name="txtViewBarberLbl">Select Barber</string>
    <string name="txtViewServiceLbl">Select Service</string>
    <string name="value_admin_home">Welcome Admin</string>
    <string name="ManageBarber">Manage Barber</string>
    <string name="ManageServices">Manage Services</string>
    <string name="ManageSchedule">Manage Schedule</string>
    <string name="AddBarber">Add Barber</string>
    <string name="emptyList">No Data Found</string>
    <string name="Home">Home</string>
    <string name="BarberSchedule">Click on Barber to Manage schedule</string>
    <string name="CreateUpdateBarber">Create/Update Barber</string>
    <string name="CreateUpdateService">Create/Update Service</string>
    <string name="AddService">Add Service</string>
    <string name="AddSchedule">Add Schedule</string>
    <string name="AddUpdateSchedule">Add/Update Schedule</string>
    <string name="BarberName">Barber Name</string>
    <string name="Add">Add</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Submit">Submit</string>
    <string-array name="spinnerMT">
        <item>"AM"</item>
        <item>"PM"</item>
    </string-array>
    <string name="title_activity_manage_service">ManageServiceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txtViewPaypal">PayPal</string>
    <string name="btnSubmitPayment">Pay Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="services">
        <item>"Haircut"</item>
        <item>"Beard Trim"</item>
        <item>"Facial"</item>
    </string-array>
    <string-array name="timeSlots">
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>
        <item>"10"</item>
        <item>"11"</item>
        <item>"12"</item>
        <item>"13"</item>
        <item>"14"</item>
        <item>"15"</item>
        <item>"16"</item>
        <item>"17"</item>
        <item>"18"</item>
        <item>"19"</item>
        <item>"20"</item>
    </string-array>
    <string name="FirstNameText">First Name :</string>
    <string name="FirstNameTextField">Enter First Name</string>
    <string name="SecondNameTextField">Enter Second Name</string>
    <string name="LastNameText">Last Name :</string>
    <string name="EmailText">Email :</string>
    <string name="UserMailId">Enter Email</string>
    <string name="submitButton">Register</string>
    <string name="List_of_Users_text">Bookings</string>
    <string name="PasswordText">Password:</string>
    <string name="PasswordTextFiels">Enter Password</string>
    <string name="UserNameTextView">PhoneNumber:</string>
    <string name="UsernameTextField">Enter PhoneNumber</string>
    <string name="backButton">Back</string>
    <string name="Login_text">Login</string>
    <string name="Login_button">Login</string>
    <string name="signupText">Sign Up!</string>
    <string name="labelService">Services</string>
    <string name="labelDAtee">Date</string>
    <string name="labelStartTime">StartTime</string>
    <string name="labelAction">Action</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="total_20">Total : $20</string>
</resources>